# gnome-directory-thumbnailer

./: AUTHORS  HACKING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-directory-thumbnailer.doap
po/: LINGUAS  be.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  kw.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: gnome-directory-thumbnailer.thumbnailer  main.c
